Starting work with feature section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </section>
         
         <!--Особенности-->
-        <!-- <section class="feature section">
+        <section class="feature section">
             <div class="conteiner">
             <h2 class="inv">Особенности</h2>
             <ul class="feature-list list">
@@ -103,7 +103,7 @@
                 </li>
             </ul>
             </div>
-        </section> -->
+        </section>
 
         <!--Чем мы занимаемся-->
         <!-- <section class="about section">
