Add section customers

--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
                     </li>
 
                     <li class="team-list__item">
-                        <img src="./image/frontend_developer.jpg" alt="Ольга Репина" width="270">
+                        <img src="./image/frontend_developer.jpg" alt="Ольга Рєпіна" width="270">
                             <div class="team-conteiner">
-                                <h3 class="team-conteiner__name">Ольга Репина</h3>
+                                <h3 class="team-conteiner__name">Ольга Рєпіна</h3>
                                 <p class="team-conteiner__text" lang="en">Frontend Developer</p>
                                 <ul class="sotial-list list">
                                     <li class="sotial-list__item">
@@ -216,9 +216,9 @@
                     </li>
 
                     <li class="team-list__item">
-                        <img src="./image/marketing.jpg" alt="Николай Тарасов" width="270">
+                        <img src="./image/marketing.jpg" alt="Микола Тарасов" width="270">
                             <div class="team-conteiner">
-                                <h3 class="team-conteiner__name">Николай Тарасов</h3>
+                                <h3 class="team-conteiner__name">Микола Тарасов</h3>
                                 <p class="team-conteiner__text" lang="en">Marketing</p>
                                 <ul class="sotial-list list">
                                     <li class="sotial-list__item">
@@ -257,9 +257,9 @@
                     </li>
 
                     <li class="team-list__item">
-                        <img src="./image/ui_designer.jpg" alt="Михаил Ермаков" width="270">
+                        <img src="./image/ui_designer.jpg" alt="Михайло Єрмаков" width="270">
                             <div class="team-conteiner">
-                                <h3 class="team-conteiner__name">Михаил Ермаков</h3>
+                                <h3 class="team-conteiner__name">Михайло Єрмаков</h3>
                                 <p class="team-conteiner__text" lang="en">UI Designer</p>
                                 <ul class="sotial-list list">
                                     <li class="sotial-list__item">
@@ -301,7 +301,7 @@
         </section>
 
         <!-- Постоянные клиенты -->
-        <!-- <section class="customers section">
+        <section class="customers section">
             <div class="conteiner">
                 <h2 class="secondary-title">Постоянные клиенты</h2>
                 <ul class="customers-list list">
@@ -354,7 +354,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         
     </main>
 
