Add two section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </section>
         
         <!--Особенности-->
-        <!-- <section class="feature section">
+        <section class="feature section">
             <div class="conteiner">
             <h2 class="inv">Особенности</h2>
             <ul class="feature-list list">
@@ -105,44 +105,44 @@
                 </li>
             </ul>
             </div>
-        </section> -->
+        </section>
 
         <!--Чем мы занимаемся-->
-        <!-- <section class="about section">
+        <section class="about section">
             <div class="conteiner">
-                <h2 class="secondary-title">Чем мы занимаемся</h2>
+                <h2 class="secondary-title">Чим ми займаємося</h2>
                 <ul class="about-list list">
                     <li class="about-list__item">
                         <img src="./image/img_stryctyr.jpg" alt="Десктопные приложения" width="370">
                     <div class="about-list__specialization">
-                        <h3 class="third-title">Десктопные приложения</h3>
+                        <h3 class="third-title">Десктопні додатки</h3>
                     </div>
                     </li>
 
                     <li class="about-list__item">
                         <img src="./image/box_2.jpg" alt="Мобильные приложения" width="370">
                     <div class="about-list__specialization">
-                        <h3 class="third-title">Мобильные приложения</h3>
+                        <h3 class="third-title">Мобильні додатки</h3>
                     </div>
                     </li>
 
                     <li class="about-list__item">
                         <img src="./image/tablet.jpg" alt="Дизайнерские решения" width="370">
                     <div class="about-list__specialization">
-                        <h3 class="third-title">Дизайнерские решения</h3>
+                        <h3 class="third-title">Дизайнерські рішення</h3>
                     </div>
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <!--Наша команда-->
-        <!-- <section class="team section">
+        <section class="team section">
             <div class="conteiner">
                 <h2 class="secondary-title">Наша команда</h2>
                 <ul class="team-list list">
                     <li class="team-list__item">
-                        <img class="team-list__foto" src="./image/product_designer.jpg" alt="Ігор Дем'яненко" width="270">
+                        <img class="team-list__foto" src="./image/product_designer.jpg" alt="Ігор Дем'яненко" >
                             <div class="team-conteiner">
                                 <h3 class="team-conteiner__name">Ігор Дем'яненко</h3>
                                 <p class="team-conteiner__text" lang="en">Product Designer</p>
@@ -298,7 +298,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <!-- Постоянные клиенты -->
         <!-- <section class="customers section">
