start works with section customers

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </li>
 
                     <li class="team-list__item">
-                        <img src="./image/frontend_developer.jpg" alt="Ольга Рєпіна" width="270">
+                        <img src="./image/frontend_developer.jpg" alt="Ольга Рєпіна" width="">
                             <div class="team-conteiner">
                                 <h3 class="team-conteiner__name">Ольга Рєпіна</h3>
                                 <p class="team-conteiner__text" lang="en">Frontend Developer</p>
@@ -216,7 +216,7 @@
                     </li>
 
                     <li class="team-list__item">
-                        <img src="./image/marketing.jpg" alt="Микола Тарасов" width="270">
+                        <img src="./image/marketing.jpg" alt="Микола Тарасов" width="">
                             <div class="team-conteiner">
                                 <h3 class="team-conteiner__name">Микола Тарасов</h3>
                                 <p class="team-conteiner__text" lang="en">Marketing</p>
@@ -257,7 +257,7 @@
                     </li>
 
                     <li class="team-list__item">
-                        <img src="./image/ui_designer.jpg" alt="Михайло Єрмаков" width="270">
+                        <img src="./image/ui_designer.jpg" alt="Михайло Єрмаков" width="">
                             <div class="team-conteiner">
                                 <h3 class="team-conteiner__name">Михайло Єрмаков</h3>
                                 <p class="team-conteiner__text" lang="en">UI Designer</p>
@@ -301,9 +301,9 @@
         </section>
 
         <!-- Постоянные клиенты -->
-        <!-- <section class="customers section">
+        <section class="customers section">
             <div class="conteiner">
-                <h2 class="secondary-title">Постоянные клиенты</h2>
+                <h2 class="secondary-title">Постійні клієнти</h2>
                 <ul class="customers-list list">
                     <li class="customers-list__item">
                         <a class="customers-list__link link" href="">
@@ -354,7 +354,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         
     </main>
 
