--- a/portfolio.html
+++ b/portfolio.html
@@ -62,11 +62,11 @@
                 <h1 class="inv">Наши работы</h1>
                 <ul class="categories-list list">
                     <li class="categories-list__item"> 
-                        <button class="categories-list__btn categories__btn-acsent" type="button">Все</button></li>
+                        <button class="categories-list__btn categories__btn-acsent" type="button">Усі</button></li>
                     <li class="categories-list__item"> 
-                        <button class="categories-list__btn categories__btn-acsent" type="button">Веб-сайты</button></li>
+                        <button class="categories-list__btn categories__btn-acsent" type="button">Веб-сайти</button></li>
                     <li class="categories-list__item"> 
-                        <button class="categories-list__btn categories__btn-acsent" type="button">Приложения</button></li>
+                        <button class="categories-list__btn categories__btn-acsent" type="button">Додатки</button></li>
                     <li class="categories-list__item"> 
                         <button class="categories-list__btn categories__btn-acsent" type="button">Дизайн</button></li>
                     <li class="categories-list__item"> 
