Add media for header menu

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,13 +25,13 @@
                     <span class="logo__text">Web</span>Studio</a>
                 <ul class="header-list list">
                     <li class="header-list__item">
-                        <a class="header-list__link link" href="./index.html"> Студия</a>
+                        <a class="header-list__link link" href="./index.html"> Студія</a>
                     </li>
                     <li class="header-list__item">
-                        <a class="header-list__link link current" href="./portfolio.html"> Портфолио</a>
+                        <a class="header-list__link link current" href="./portfolio.html"> Портфоліо</a>
                     </li>
                     <li class="header-list__item">
-                        <a class="header-list__link link" href=""> Контакты</a>
+                        <a class="header-list__link link" href="">Контакти</a>
                     </li>
                 </ul>
             </nav>
@@ -77,11 +77,10 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                    <img  src="./image/tehnokryak.jpg" alt="фото команды" width="370">
+                                    <img  src="./image/tehnokryak.jpg" alt="фото команды" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
-                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                    шпионажа и атак на защищённые сервера конкурентов.
+                                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                                     </p>
                                 </div>
                             </div>
@@ -95,11 +94,11 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img src="./image/img-nba.jpg" alt="два баскетолиста" width="370">
+                                <img src="./image/img-nba.jpg" alt="два баскетолиста" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                        шпионажа и атак на защищённые сервера конкурентов.
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+
                                     </p>
                                 </div>
                             </div>
@@ -113,17 +112,17 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img src="./image/seafoot.jpg" alt="логотип ресторана" width="370">
+                                <img src="./image/seafoot.jpg" alt="логотип ресторана" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
-                                    Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                    шпионажа и атак на защищённые сервера конкурентов.
+                                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+
                                     </p>
                                 </div>
                             </div>
                             <div class="projects-name">
                                 <h2 class="projects-name__title">Ресторан <span lang="en">Seafood</span></h2>
-                                <p class="projects-name__type">Приложение</p>
+                                <p class="projects-name__type">Додаток</p>
                             </div>
                         </a>
                     </li>
@@ -131,16 +130,16 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img src="./image/music.jpg" alt="наушники" width="370">
+                                <img src="./image/music.jpg" alt="наушники" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                        шпионажа и атак на защищённые сервера конкурентов.
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+
                                     </p>
                                 </div>
                             </div>
                             <div class="projects-name">
-                                <h2 class="projects-name__title">Проект <span lang="en">Prime</span></h2>
+                                <h2 class="projects-name__title">Проєкт <span lang="en">Prime</span></h2>
                                 <p class="projects-name__type">Маркетинг</p>
                             </div>
                         </a>
@@ -149,17 +148,17 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img src="./image/boxes.jpg" alt="две коробки" width="370">
+                                <img src="./image/boxes.jpg" alt="две коробки" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                        шпионажа и атак на защищённые сервера конкурентов.
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+
                                     </p>
                                 </div>
                             </div>
                             <div class="projects-name">
-                                <h2 class="projects-name__title">Проект <span lang="en">Boxes</span></h2>
-                                <p class="projects-name__type">Приложение</p>
+                                <h2 class="projects-name__title">Проєкт <span lang="en">Boxes</span></h2>
+                                <p class="projects-name__type">Додаток</p>
                             </div>
                         </a>
                         </li>
@@ -167,11 +166,11 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img src="./image/monitor.jpg" alt="монитор с сайтом" width="370">
+                                <img src="./image/monitor.jpg" alt="монитор с сайтом" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                        шпионажа и атак на защищённые сервера конкурентов.
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+
                                     </p>
                                 </div>
                             </div>
@@ -185,11 +184,11 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img src="./image/limited-boks.jpg" alt="эксклюзивное издание" width="370">
+                                <img src="./image/limited-boks.jpg" alt="эксклюзивное издание" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                        шпионажа и атак на защищённые сервера конкурентов.
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+
                                     </p>
                                 </div>
                             </div>
@@ -203,11 +202,11 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img src="./image/label.jpg" alt="лэйба" width="370">
+                                <img src="./image/label.jpg" alt="лэйба" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                        шпионажа и атак на защищённые сервера конкурентов.
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+
                                     </p>
                                 </div>
                             </div>
@@ -221,17 +220,17 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img src="./image/laptop.jpg" alt="ноутбук с заставкой сайта" width="370">
+                                <img src="./image/laptop.jpg" alt="ноутбук с заставкой сайта" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                        шпионажа и атак на защищённые сервера конкурентов.
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+
                                     </p>
                                 </div>
                             </div>
                             <div class="projects-name">
                                 <h2 class="projects-name__title" lang="en">Growing Business</h2>
-                                <p class="projects-name__type">Приложение</p>
+                                <p class="projects-name__type">Додаток</p>
                             </div>
                         </a>
                     </li>
