Add media 1200 for menu-conteiner

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,45 +36,47 @@
                     </svg>
                     </button>
 
-                <div class="menu-conteiner conteiner" 
+                <div class="menu-conteiner" 
                      id="menu-conteiner" data-menu>
                     <ul class="header-list list">
-                    <li class="header-list__item">
-                        <a class="header-list__link link" href="./index.html"> Студія</a>
-                    </li>
-                    <li class="header-list__item">
-                        <a class="header-list__link link current" href="./portfolio.html"> Портфоліо</a>
-                    </li>
-                    <li class="header-list__item">
-                        <a class="header-list__link link" href="">Контакти</a>
-                    </li>
-                    </ul>
+                        <li class="header-list__item">
+                            <a class="header-list__link link" href="./index.html"> Студія</a>
+                        </li>
+                        <li class="header-list__item">
+                            <a class="header-list__link link current" href="./portfolio.html"> Портфоліо</a>
+                        </li>
+                        <li class="header-list__item">
+                            <a class="header-list__link link" href="">Контакти</a>
+                        </li>
+                    </ul>                     
                     <ul class="contacts-list list">
-                    <li class="contacts-list__item">
+                        <li class="contacts-list__item">
                         <a class="contacts-list__link link" href="mailto:info@devstudio.com">
                             <svg class="contacts-list__icon">
                                 <use href="./image/symbol-defs.svg#icon-envelope"></use>
                             </svg>
-                            info@devstudio.com</a>
-                    </li>
-                    <li class="contacts-list__item">
+                            info@devstudio.com
+                        </a>
+                        </li>
+                        <li class="contacts-list__item">
                         <a class="contacts-list__link link" href="tel:+380961111111">
                             <svg class="contacts-list__icon contacts-list__tel">
                                 <use href="./image/symbol-defs.svg#icon-smartphone"></use>
                             </svg>
-                            +38 096 111 11 11</a>
-                    </li>
+                            +38 096 111 11 11
+                        </a>
+                        </li>
                     </ul>
-                    <ul class="menu-contact">
-                        <l1 class="menu-contact__item">Instagram
+                    <!-- <ul class="menu-contact">
+                        <l1 class="menu-contact__item"><a href="" class="menu-contacts__links">Instagram</a>
                         </l1>
-                        <l1 class="menu-contact__item">Twitter
+                        <l1 class="menu-contact__item"><a href="" class="menu-contacts__links">Twitter</a>
                         </l1>
-                        <l1 class="menu-contact__item">Facebook
+                        <l1 class="menu-contact__item"><a href="" class="menu-contacts__links">Facebook</a>
                         </l1>
-                        <l1 class="menu-contact__item">LinkedIn
+                        <l1 class="menu-contact__item"><a href="" class="menu-contacts__links">LinkedIn</a>
                         </l1>
-                    </ul>
+                    </ul> -->
                 </div>
             </nav>
         </div>
@@ -102,7 +104,7 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                    <img  src="./image/tehnokryak.jpg" alt="фото команды" width="">
+                                    <img  class="progect-box__img" src="./image/tehnokryak.jpg" alt="фото команды" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
