Add scale 1,25 for the categorie progects image

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,16 +67,16 @@
                         </a>
                         </li>
                     </ul>
-                    <!-- <ul class="menu-contact">
-                        <l1 class="menu-contact__item"><a href="" class="menu-contacts__links">Instagram</a>
+                    <ul class="menu-contact">
+                        <l1 class="menu-contact__item"><a href="" class="menu-contacts__links link">Instagram</a>
                         </l1>
-                        <l1 class="menu-contact__item"><a href="" class="menu-contacts__links">Twitter</a>
+                        <l1 class="menu-contact__item"><a href="" class="menu-contacts__links link">Twitter</a>
                         </l1>
-                        <l1 class="menu-contact__item"><a href="" class="menu-contacts__links">Facebook</a>
+                        <l1 class="menu-contact__item"><a href="" class="menu-contacts__links link">Facebook</a>
                         </l1>
-                        <l1 class="menu-contact__item"><a href="" class="menu-contacts__links">LinkedIn</a>
+                        <l1 class="menu-contact__item"><a href="" class="menu-contacts__links link">LinkedIn</a>
                         </l1>
-                    </ul> -->
+                    </ul>
                 </div>
             </nav>
         </div>
@@ -86,7 +86,7 @@
     <!--Наши работы-->
         <section class="categories section">
             <div class="conteiner">
-                <h1 class="inv">Наши работы</h1>
+                <h1 class="inv">Наші работы</h1>
                 <ul class="categories-list list">
                     <li class="categories-list__item"> 
                         <button class="categories-list__btn categories__btn-acsent" type="button">Усі</button></li>
@@ -104,7 +104,7 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                    <img  class="progect-box__img" src="./image/tehnokryak.jpg" alt="фото команды" width="">
+                                    <img  class="progect-box__img" src="./image/tehnokryak.jpg" alt="фото команды">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -121,7 +121,7 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img src="./image/img-nba.jpg" alt="два баскетолиста" width="">
+                                <img class="progect-box__img" src="./image/img-nba.jpg" alt="два баскетолиста" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -139,7 +139,7 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img src="./image/seafoot.jpg" alt="логотип ресторана" width="">
+                                <img class="progect-box__img" src="./image/seafoot.jpg" alt="логотип ресторана" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -157,7 +157,7 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img src="./image/music.jpg" alt="наушники" width="">
+                                <img class="progect-box__img" src="./image/music.jpg" alt="наушники" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -175,7 +175,7 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img src="./image/boxes.jpg" alt="две коробки" width="">
+                                <img class="progect-box__img" src="./image/boxes.jpg" alt="две коробки" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -193,7 +193,7 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img src="./image/monitor.jpg" alt="монитор с сайтом" width="">
+                                <img class="progect-box__img" src="./image/monitor.jpg" alt="монитор с сайтом" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -211,7 +211,7 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img src="./image/limited-boks.jpg" alt="эксклюзивное издание" width="">
+                                <img class="progect-box__img" src="./image/limited-boks.jpg" alt="эксклюзивное издание" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -229,7 +229,7 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img src="./image/label.jpg" alt="лэйба" width="">
+                                <img class="progect-box__img" src="./image/label.jpg" alt="лэйба" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -247,7 +247,7 @@
                     <li class="categories-projects__list">
                         <a class="categories-projects__link link" href="">
                             <div class="project-box">
-                                <img src="./image/laptop.jpg" alt="ноутбук с заставкой сайта" width="">
+                                <img class="progect-box__img" src="./image/laptop.jpg" alt="ноутбук с заставкой сайта" width="">
                                 <div class="projects-box__fon is-hidden-fon">
                                     <p class="projects-box__text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
